# SoccerSimulation

./: .env.example  .gitignore  .pre-commit-config.yaml  Club.py  Dockerfile  League.py  Match.py  Player.py  PlayerReportEngine.py  Procfile  README.md  Scheduler.py  Select.py  System.py  Universe.py  app.py  config.py  delete_12_hour_mongodb_data.py  docker-compose.yml  goalProbability.py  init-mongorestore.sh  main.py  mongodb_storage_space_error.txt  pyproject.toml  requirements.txt  transfer_data_from_mysql_to_mongodb.py  universe_hsmigwjdhr  whitelist.py  win_app.bat  worker.py
.github/workflows/: ci.yml
app/: club_utils.py  config.py  create_test_universe.py  player_utils.py  simulate.py  store_test_universe.py  store_test_universe_grid_fs.py  utils.py
app/models/: Club.py  Database.py  Fixture.py  League.py  Match.py  Player.py  PlayerController.py  PlayerReportEngine.py  Scheduler.py  System.py  Team.py  Universe.py
blueprints/club/: __init__.py  routes.py
blueprints/fixture/: __init__.py  routes.py
blueprints/general/: __init__.py  routes.py
blueprints/home/: __init__.py  routes.py
blueprints/player/: __init__.py  routes.py
blueprints/simulation/: __init__.py  routes.py
frontend/: app.py  main.py  test.py
frontend/templates/: about.html  base.html  nav.html  (+16 more)
ss/: club_utils.py  config.py  create_test_universe.py  delete_all_mongodb_gridfs_data.py  email_service.py  goal_probability.py  player_utils.py  send_email.py  simulate.py  store_test_universe.py  store_test_universe_grid_fs.py  utils.py
test/: canvas.html  script.js  test.py  test2.py  test3.py
utils/: dependencies.py  helpers.py
(+80 files in other folders)
